--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,15 @@
             "email": "pedrazadixon@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php": "^7.3",
+        "laravel/framework": "^8.0"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Pedrazadixon\\LaravelSimplePermissions\\Providers\\LaravelSimplePermissionsProvider"
+            ]
+        }
+    }
 }
