--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
         }
     ],
     "require": {
-        "php": "^7.3 || ^8.0",
-        "laravel/framework": "^8.0"
+        "php": "^7.3|^8.0",
+        "laravel/framework": "^8.0|^9.0|^10.0"
     },
     "extra": {
         "laravel": {
